--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ajax": "^0.0.4",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "csurf": "^1.11.0",
     "express": "^4.18.3",
